# c2pa-component

./: Cargo.toml  README.md  rust-toolchain.toml
c2pa-tool/: Cargo.toml
c2pa-tool/src/: main.rs
c2pa-tool/wit/: world.wit
c2pa-web/: README.md  index.html  main.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json
c2pa-web/src/: main.ts
c2pa-web/types/: c2pacomponent.d.ts  c2pacomponent.js
c2pa-web/types/interfaces/: adobe-cai-manifest.d.ts  wasi-filesystem-types.d.ts  wasi-io-poll.d.ts  wasi-io-streams.d.ts
component/: Cargo.toml
component/src/: lib.rs
node-c2pa/: README.md  http-c2pa.js  http-c2pa.ts  package-lock.json  package.json  tsconfig.json
node-c2pa/types/: c2pa-node.d.ts  wit.d.ts
node-c2pa/types/interfaces/: adobe-cai-manifest.d.ts  adobe-cai-types.d.ts  cai.d.ts  wasi-http-types.d.ts
src/: lib.rs
wit/: c2pa.wit  cai.wit  deps.toml
