[package]
name = "c2pa-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:c2pa-tool"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]
"adobe:cai" = { path = "wit/deps/adobe" }
