[package]
# TODO: rename c2pa-component
name = "c2pacomponent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.34", features = ["default"] }
c2pa = { git = "https://github.com/contentauth/c2pa-rs.git", branch = "wasm32-wasi_0.41.0"}
wasi = "0.13.3+wasi-0.2.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.103", features = ["arbitrary_precision"] }

[package.metadata.component.target]
path = "../wit"
world = "cai"

[package.metadata.component.target.dependencies]
"wasi:io" = { path = "../wit/deps/io" }
